fixed description of SVD decomp matrices

--- a/index.ipynb
+++ b/index.ipynb
@@ -227,7 +227,7 @@
     "\n",
     "$$ A = U\\Sigma V^T$$\n",
     "\n",
-    "Where $A$ is an $n x d$ matrix, $U$ is an $(n x r)$ orthogonal matrix, $𝚺$ is an $(r x r)$ nonnegative rectangular diagonal matrix, and $V$ is an $(r x d)$ orthogonal matrix.\n",
+    "Where $A$ is a $n x d$ matrix, $U$ is a $n x r$ matrix, $𝚺$ is a $r x r$ is a diagonal matrix, and $V$ is a $r x d$ matrix.\n",
     "$U$ is also referred to as the __left singular vectors__, 𝚺 the __singular values__, and V the __right singular vectors__. "
    ]
   },
@@ -297,7 +297,7 @@
       "U:\n",
       " [[-2.21829477e-01  4.58445949e-02]\n",
       " [-8.50288016e-01  3.86369035e-01]\n",
-      " [-2.14780401e-19 -2.00071339e-20]\n",
+      " [ 2.50607631e-19 -1.97258636e-20]\n",
       " [ 3.88289052e-01  2.35719092e-01]\n",
       " [ 2.77549248e-01  8.90535654e-01]]\n",
       "\n",
@@ -305,8 +305,8 @@
       " [ 3.89366418 10.99269663]\n",
       "\n",
       "V.T:\n",
-      " [[-8.63729488e-01 -8.36282754e-19  5.03955724e-01]\n",
-      " [ 5.03955724e-01 -2.19932353e-19  8.63729488e-01]]\n"
+      " [[-8.63729488e-01  9.75781955e-19  5.03955724e-01]\n",
+      " [ 5.03955724e-01 -2.16840434e-19  8.63729488e-01]]\n"
      ]
     }
    ],
@@ -363,11 +363,11 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 1.00000000e+00,  6.11485906e-19, -5.55111512e-17],\n",
-       "       [ 5.00000000e+00,  1.83460645e-18,  2.00000000e+00],\n",
-       "       [ 6.11485906e-19,  7.47739084e-37, -6.11411539e-19],\n",
-       "       [ 0.00000000e+00, -1.83423462e-18,  3.00000000e+00],\n",
-       "       [ 4.00000000e+00, -3.05676023e-18,  9.00000000e+00]])"
+       "array([[ 1.00000000e+00, -9.52089627e-19,  2.77555756e-16],\n",
+       "       [ 5.00000000e+00, -4.15152929e-18,  2.00000000e+00],\n",
+       "       [-9.52089627e-19,  9.99170198e-37,  3.04459424e-19],\n",
+       "       [ 8.88178420e-16,  9.13378273e-19,  3.00000000e+00],\n",
+       "       [ 4.00000000e+00, -1.06822369e-18,  9.00000000e+00]])"
       ]
      },
      "execution_count": 2,
@@ -396,10 +396,10 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 1.,  0., -0.],\n",
-       "       [ 5.,  0.,  2.],\n",
-       "       [ 0.,  0., -0.],\n",
-       "       [ 0., -0.,  3.],\n",
+       "array([[ 1., -0.,  0.],\n",
+       "       [ 5., -0.,  2.],\n",
+       "       [-0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  3.],\n",
        "       [ 4., -0.,  9.]])"
       ]
      },
@@ -477,7 +477,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.5"
   },
   "toc": {
    "base_numbering": 1,
